add form for chech the information from files. Change order of files doesnt work

--- a/react-app/src/Tabs/style.module.css
+++ b/react-app/src/Tabs/style.module.css
@@ -64,6 +64,12 @@
    
   /* Tab Content Styles */
   .TabContent {
-    font-size: 2rem;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .in{
+    width:2rem;
+    font-size: 1rem;
     text-align: center;
   }
