--- a/react-app/src/DownloadFile/style.module.css
+++ b/react-app/src/DownloadFile/style.module.css
@@ -10,3 +10,27 @@
 .filePicker{
   width: 50px;
 }
+
+.callModalWindowsStyle{
+  display: flex;
+  justify-content: center;
+  margin-top: 4px;
+}
+
+.button{
+  margin-left: 4px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  color: #fff;
+  background-color: rgb(0, 78, 154, 1);
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  padding: 15px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
