--- a/react-app/src/Tabs/style.module.css
+++ b/react-app/src/Tabs/style.module.css
@@ -73,3 +73,24 @@
     font-size: 1rem;
     text-align: center;
   }
+
+  .button{
+    margin-left: 4px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+    color: #fff;
+    background-color: rgb(0, 78, 154, 1);
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    padding: 15px;
+  }
+
+  .buttonContainer{
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .button:hover{
+    color: chocolate;
+  }
