--- a/react-app/src/Tabs/style.module.css
+++ b/react-app/src/Tabs/style.module.css
@@ -101,3 +101,9 @@
     justify-content: center;
     align-items: center;
   }
+
+  .finalButtons{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+  }
